[package]
name = "uncensored_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.29"
redis = "0.23.4"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"
slug = "0.1.5"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace", "set-header", "timeout", "limit", "cors"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}

